# machbarkeit-query

./: .gitignore  .mega-linter.yml  Cargo.toml  Dockerfile  README.md  app.yaml
.github/workflows/: build.yaml
src/: auth.rs  client.rs  config.rs  main.rs  model.rs  websocket.rs
