[package]
name = "machbarkeit-query"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
log = "0.4.27"
serde_json = "1.0.141"
reqwest = "0.12.22"
config = "0.15.13"
serde_derive = "1.0.219"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
oauth2 = { version = "5.0.0", features = ["reqwest", "rustls-tls", "reqwest-blocking"] }
http = "1.3.1"
env_logger = "0.11.8"
futures-channel = "0.3.31"

[dev-dependencies]
httpmock = "0.8.1"
